--- a/_sass/settings/icons.scss
+++ b/_sass/settings/icons.scss
@@ -1,4 +1,4 @@
-$fa-font-path: "/fonts/font-awesome/";
+@import "settings/settings";
 
 @import "vendors/font-awesome/fontawesome.scss";
 @import "vendors/font-awesome/solid.scss";
