--- a/_sass/settings/settings.scss
+++ b/_sass/settings/settings.scss
@@ -1,3 +1,6 @@
+$fa-font-path: "/fonts/font-awesome/";
+$fa-font-display: block;
+
 $family-primary: Montserrat, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 $family-secondary: FiraCode, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 $family-code: FiraCode;
