--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -5,7 +5,7 @@
 
     {% include meta.html %}
 
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/resume.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/resume.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
   </head>
 
