--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -1,8 +1,7 @@
 @charset "UTF-8";
-@font-face {
-  font-family: Montserrat;
-  src: url("/fonts/Montserrat-Medium.ttf");
-}
+
+@import "settings/settings";
+@import "settings/fonts";
 
 body {
   font-size: 14px;
