--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@ layout: compress
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
     {% include preload.html %}
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/preload.css" />
   </head>
 
   <body class="vsc-initialized has-navbar-fixed-top">
@@ -65,6 +65,8 @@ layout: compress
 
     {% include analytics.html %}
 
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/vendors.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css" />
     <script src="{{ site.baseurl }}/assets/js/base.js"></script>
   </body>
 </html>
