--- a/_layouts/mentorship.html
+++ b/_layouts/mentorship.html
@@ -5,6 +5,7 @@
 
     {% include meta.html %}
 
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/vendors.css" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/mentorship.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
