--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -9,7 +9,8 @@
 <meta name="distribution" content="global">
 <meta name="language" content="en,pt">
 <meta name=”robots” content=”index,follow”>
-<meta name=" theme-color" content="#741b47">
+<meta name=" theme-color" content="{{ site.theme_color }}">
+<link rel="apple-touch-icon" href="/assets/images/logo-hex.web">
 
 {% if page.excerpt %}
 <meta name="description" content="{{ page.excerpt| strip_html }}" />
