Improve fonts load

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,6 +1,6 @@
 <section class="hero is-{{include.theme}} {{include.class}}">
   <div class="hero-body">
-    <h1 class="title">
+    <h1 class="title" aria-label="{{include.title}}" aria-hidden="true">
       {{include.title}}
     </h1>
 
