--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -10,7 +10,7 @@
 <meta name="language" content="en,pt">
 <meta name=”robots” content=”index,follow”>
 <meta name=" theme-color" content="{{ site.theme_color }}">
-<link rel="apple-touch-icon" href="/assets/images/logo-hex.web">
+<link rel="apple-touch-icon" href="/assets/images/logo-hex.webp">
 
 {% if page.excerpt %}
 <meta name="description" content="{{ page.excerpt| strip_html }}" />
