--- a/_sass/settings/settings.scss
+++ b/_sass/settings/settings.scss
@@ -3,7 +3,7 @@ $fa-font-display: block;
 
 $family-primary: Montserrat, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 $family-secondary: FiraCode, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-$family-code: FiraCode;
+$family-code: FiraCode, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
 $primary:    #741b47;
 $accent:     #d5a6bd;
