--- a/_sass/settings/fonts.scss
+++ b/_sass/settings/fonts.scss
@@ -3,11 +3,13 @@
 @font-face {
   font-family: Montserrat;
   src: url("/assets/fonts/Montserrat-Medium.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: FiraCode;
   src: url("/assets/fonts/FiraCode-Medium.ttf");
+  font-display: swap;
 }
 
 @font-face {
