Add width height props

--- a/_includes/components/post.html
+++ b/_includes/components/post.html
@@ -14,7 +14,9 @@
         class="images-section-image"
         src="{{include.img | replace: "/assets/images", "/assets/images/thumbnails/small"}}"
         alt="{{include.alt}}"
-        width="100%" height="auto"
+        width="466"
+        height="240"
+
     >
 
     <h2 class="images-section-subtitle">
