--- a/_includes/components/project.html
+++ b/_includes/components/project.html
@@ -10,7 +10,8 @@
         <img
           src="https://raw.githubusercontent.com/devicons/devicon/master/icons/{{include.main}}/{{include.main}}-original.svg"
           alt="{{include.main}} logo"
-          width="100%" height="auto"
+          width="64"
+          height="64"
         />
       </p>
     </figure>
