--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,16 +19,13 @@ layout: compress
     <![endif]-->
 
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
-    {% include preload.html %}
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/preload.css" />
   </head>
 
   <body class="vsc-initialized has-navbar-fixed-top">
     <nav class="navbar is-fixed-top is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <div class="navbar-item">
-                <img src="/assets/images/logo-typo.webp" alt="Logo which is written { @ } JOAOMARCUSLF" height="50" width="100%" />
+                <img src="/assets/images/logo-typo.webp" alt="Logo which is written { @ } JOAOMARCUSLF" height="28" width="177" />
             </div>
 
             <button type="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenuTarget">
