--- a/_includes/expanded/projects.html
+++ b/_includes/expanded/projects.html
@@ -15,6 +15,7 @@
           alt=project.alt
           main=project.main
           techs=project.techs
+          collaborator=project.collaborator
       %}
       {% endfor %}
     </div>
