--- a/_sass/components/projects-section.scss
+++ b/_sass/components/projects-section.scss
@@ -122,6 +122,10 @@
           .projects-tags-level {
             flex: 1;
           }
+
+          .tag.is-highlight {
+            background-color: rgba($pre, .7);
+          }
         }
       }
     }
