--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -67,6 +67,7 @@
 @import "components/posts-section";
 @import "components/projects-section";
 @import "components/highlights";
+@import "components/tooltips";
 
 /*
   Trumps Layer
