--- a/_sass/_mentorship.scss
+++ b/_sass/_mentorship.scss
@@ -26,6 +26,15 @@
   margin-top: 2rem;
 }
 
+.is-reverse-row {
+  display: flex;
+  flex-direction: row-reverse;
+
+  .button {
+    margin: 0.5rem 0.15rem 1rem;
+  }
+}
+
 @keyframes shake-error-animation {
   0% { transform: translate(1px, 1px) rotate(0deg); }
   10% { transform: translate(-1px, -2px) rotate(-1deg); }
