--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -21,8 +21,8 @@
 {% endif %}
 
 {% if page.title %}
-<meta property="og:title" content="{{ site.name }} - {{ page.title }}" />
-<meta property="twitter:title" content="{{ site.name }} - {{ page.title }}" />
+<meta property="og:title" content="{{ page.title }} - {{ site.name }}" />
+<meta property="twitter:title" content="{{ page.title }} - {{ site.name }}" />
 {% else %}
 <meta property="og:title" content="{{ site.name }}" />
 <meta property="twitter:title" content="{{ site.name }}" />
