Add tags to posts

--- a/_includes/highlighted/posts.html
+++ b/_includes/highlighted/posts.html
@@ -2,7 +2,7 @@
   <div class="hero-body">
     <h2 class="images-section-title">Highlighted Posts</h2>
 
-    <div class="images-section-group is-higlights">
+    <div class="images-section-group is-highlight">
       {% assign filtered = site.posts | where: 'draft', false %}
 
       {% for post in filtered %}
