--- a/_includes/highlighted/projects.html
+++ b/_includes/highlighted/projects.html
@@ -2,7 +2,7 @@
   <div class="hero-body">
     <h2 class="projects-section-title">Highlighted Projects</h2>
 
-    <div class="projects-section-group is-higlights">
+    <div class="projects-section-group is-highlight">
       {% assign sorted = site.projects | sort: 'date' | reverse %}
 
       {% for project in sorted %}
