--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,34 +1,35 @@
 {% seo %}
 
 <meta charset="utf-8" />
-<meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
-<meta http-equiv='X-UA-Compatible' content='IE=edge'>
-<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=6.0'>
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=6.0">
 <meta name="robot" content="all">
 <meta name="rating" content="general">
 <meta name="distribution" content="global">
 <meta name="language" content="en,pt">
-<meta name=”robots” content=”index,follow”>
-<meta name=" theme-color" content="{{ site.theme_color }}">
+<meta name="robots" content="index,follow">
+<meta name="theme-color" content="{{ site.theme_color }}">
+
 <link rel="apple-touch-icon" href="/assets/images/logo-hex.webp">
+<meta property="og:image" content="http://joaomarcuslf.com/assets/images/logo-hex.webp">
 
 {% if page.excerpt %}
-<meta name="description" content="{{ page.excerpt| strip_html }}" />
-<meta property="og:description" content="{{ page.excerpt| strip_html }}" />
+  <meta name="description" content="{{ page.excerpt | strip_html }}" />
+  <meta property="og:description" content="{{ page.excerpt | strip_html }}" />
 {% else %}
-<meta name="description" content="{{ site.description }}">
-<meta property="og:description" content="{{ site.description }}" />
+  <meta name="description" content="{{ site.description | strip_html }}">
+  <meta property="og:description" content="{{ site.description | strip_html }}" />
 {% endif %}
 
 {% if page.title %}
-<meta property="og:title" content="{{ page.title }} - {{ site.name }}" />
-<meta property="twitter:title" content="{{ page.title }} - {{ site.name }}" />
+  <meta property="og:title" content="{{ page.title }} | {{ site.name }}" />
+  <meta property="twitter:title" content="{{ page.title }} | {{ site.name }}" />
 {% else %}
-<meta property="og:title" content="{{ site.name }}" />
-<meta property="twitter:title" content="{{ site.name }}" />
+  <meta property="og:title" content="{{ site.name }}" />
+  <meta property="twitter:title" content="{{ site.name }}" />
 {% endif %}
 
-<meta property="og:image" content="http://joaomarcuslf.com/assets/images/logo-hex.webp">
 
 <meta name="keywords" content="{{ site.keywords }}">
 <meta name="abstract" content="{{ site.abstract }}">
