--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,7 @@ layout: compress
 <html lang="en">
   <head>
     <title>
-      {% if page.title %}
-        {{ page.title }} –
-      {% endif %}
-
-      {{ site.name }}
+      {% if page.title %} {{ page.title }} | {% endif %} {{ site.name }}
     </title>
 
     {% include meta.html %}
