--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,21 +28,21 @@ layout: default
       {% assign maxRelated = 3 %}
       {% assign minCommonTags =  2 %}
       {% assign maxRelatedCounter = 0 %}
+      {% assign filtered = site.posts | where: 'draft', false %}
 
-      {% for post in site.posts %}
+      {% for post in filtered %}
+        {% assign sameTagCount = 0 %}
 
-      {% assign sameTagCount = 0 %}
+        {% for tag in post.tags %}
+          {% if post.url != page.url %}
+            {% if page.tags contains tag %}
+              {% assign sameTagCount = sameTagCount | plus: 1 %}
+            {% endif %}
+          {% endif %}
+        {% endfor %}
 
-      {% for tag in post.tags %}
-      {% if post.url != page.url %}
-      {% if page.tags contains tag %}
-      {% assign sameTagCount = sameTagCount | plus: 1 %}
-      {% endif %}
-      {% endif %}
-      {% endfor %}
-
-      {% if sameTagCount >= minCommonTags %}
-      {%
+        {% if sameTagCount >= minCommonTags %}
+          {%
             include components/post.html
               link=post.link
               img=post.img
@@ -51,15 +51,13 @@ layout: default
               internal=post.internal
           %}
 
-      {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+          {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
 
-      {% if maxRelatedCounter >= maxRelated %}
-      {% break %}
-      {% endif %}
-      {% endif %}
-
+          {% if maxRelatedCounter >= maxRelated %}
+            {% break %}
+          {% endif %}
+        {% endif %}
       {% endfor %}
-
     </div>
   </div>
 </section>
