Add tags and fixes position

--- a/_includes/components/post.html
+++ b/_includes/components/post.html
@@ -2,12 +2,14 @@
 <a
     class="images-section-item"
     href="{{include.link}}"
+    data-tags="{{ include.tags  | join: "," }}"
 >
 {% else %}
 <a
     class="images-section-item"
     href="{{include.link}}"
     target="blank"
+    data-tags="{{ include.tags  | join: "," }}"
 >
 {% endif %}
     <img
