--- a/_sass/components/mentorship-lists-section.scss
+++ b/_sass/components/mentorship-lists-section.scss
@@ -53,7 +53,7 @@
 
   .mentorship-lists-section-group {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
     flex-wrap: wrap;
 
