--- a/_sass/components/projects-section.scss
+++ b/_sass/components/projects-section.scss
@@ -38,7 +38,7 @@
 
   .projects-section-group {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
     flex-wrap: wrap;
 
