--- a/_sass/components/skills-section.scss
+++ b/_sass/components/skills-section.scss
@@ -48,7 +48,7 @@
 
   .skills-section-group {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
     flex-wrap: wrap;
 
