--- a/_sass/objects/flag-toggle.scss
+++ b/_sass/objects/flag-toggle.scss
@@ -9,7 +9,7 @@
   @extend .vertical-center-container;
 
   width: 4vw;
-  justify-content: space-between;
+  justify-content: space-around;
   border-radius: 100%;
   height: 100%;
 
