--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 
     <div class="tags">
       {% for tag in page.tags %}
-        <a href="/posts#{{ tag | slugify }}" class="tag is-light" >{{ tag }}</a>
+        <a id="tag-{{tag}}" href="/posts#{{ tag | slugify }}" class="tag is-light" >{{ tag }}</a>
       {% endfor %}
     </div>
   </div>
