--- a/_includes/expanded/projects.html
+++ b/_includes/expanded/projects.html
@@ -1,6 +1,6 @@
 <section class="hero projects-section is-dark">
   <div class="hero-body">
-    <h2 class="projects-section-title">Projects</h2>
+    <h2 class="projects-section-title">{% t projects.section %}</h2>
 
     <div class="projects-section-group">
       {% assign sorted = site.projects | sort: 'date' | reverse %}
