--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,33 +1,49 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p class="mb-0">
-      Made by <strong>Joaomarcuslf</strong>. <br /> You can find more about me <a href="{{site.linktr}}" target="blank" aria-label='Link for my linktree page'>in my Linktree</a>.
+      {% t footer.made_by_01 %} <strong>@joaomarcuslf</strong>.
     </p>
 
-    <div class="is-hidden" aria-hidden="true">
+    <span class="icon-text mt-5 px-15 is-flex-container has-space-evenly">
       <a href="{{site.github}}" target="blank">
-        Github
+        <span class="is-hidden">Github</span>
+        <span class="icon is-large">
+          <span class="fab fa-github fa-lg">
+          </span>
+        </span>
       </a>
 
       <a href="{{site.linkedin}}" target="blank">
-        LinkedIn
+        <span class="is-hidden">Linkedin</span>
+        <span class="icon is-large">
+          <span class="fab fa-linkedin fa-lg">
+          </span>
+        </span>
       </a>
 
       <a href="{{site.medium}}" target="blank">
-        Medium
+        <span class="is-hidden">Medium</span>
+        <span class="icon is-large">
+          <span class="fab fa-medium fa-lg">
+          </span>
+        </span>
       </a>
 
       <a href="{{site.codewars}}" target="blank">
-        Codewars
-      </a>
-
-      <a href="{{site.sourcerer}}" target="blank">
-        Sourcerer
+        <span class="is-hidden">Codewars</span>
+        <span class="icon is-large">
+          <span class="fas fa-code fa-lg">
+          </span>
+        </span>
       </a>
 
       <a href="{{site.twitter}}" target="blank">
-        Twitter
+        <span class="is-hidden">Twitter</span>
+        <span class="icon is-large">
+          <span class="fab fa-twitter fa-lg">
+          </span>
+        </span>
       </a>
-    </div>
+    </>
   </div>
 </footer>
