--- a/_includes/highlighted/projects.html
+++ b/_includes/highlighted/projects.html
@@ -1,6 +1,6 @@
 <section id="projects" class="hero projects-section is-dark">
   <div class="hero-body">
-    <h2 class="projects-section-title">Highlighted Projects</h2>
+    <h2 class="projects-section-title">{% t highlighted_projects.title %}</h2>
 
     <div class="projects-section-group is-highlight">
       {% assign sorted = site.projects | sort: 'date' | reverse %}
