--- a/_includes/highlighted/skills.html
+++ b/_includes/highlighted/skills.html
@@ -1,6 +1,6 @@
 <section class="hero skills-section is-dark">
   <div class="hero-body">
-    <h2 class="skills-section-title">Highlighted Skills</h2>
+    <h2 class="skills-section-title">{% t highlighted_skills.title %}</h2>
 
     <div class="skills-section-group">
 
@@ -16,6 +16,6 @@
       {% endfor %}
 
     </div>
-    <div class="has-text-right"><a href="/about-me">See more...</a></div>
+    <div class="has-text-right"><a href="/about-me">{% t highlighted_skills.see_more %}</a></div>
   </div>
 </section>
