--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -71,6 +71,7 @@
 @import "components/recommendations";
 @import "components/skills-section";
 @import "components/tooltips";
+@import "components/lang-dropdown";
 
 /*
   Trumps Layer
