--- a/_sass/components/skills-section.scss
+++ b/_sass/components/skills-section.scss
@@ -92,6 +92,12 @@
           font-size: 1rem;
         }
       }
+
+      &.is-closed {
+        .skills-tree-categories.is-highlight {
+          max-height: 0;
+        }
+      }
     }
 
     .skills-section-item {
