--- a/_sass/generics/flex-container.scss
+++ b/_sass/generics/flex-container.scss
@@ -16,4 +16,16 @@
   .to-right {
     justify-content: flex-end;
   }
+
+  &.has-space-between {
+    justify-content: space-between;
+  }
+
+  &.has-space-around {
+    justify-content: space-around;
+  }
+
+  &.has-space-evenly {
+    justify-content: space-evenly;
+  }
 }
