--- a/_sass/settings/reset.scss
+++ b/_sass/settings/reset.scss
@@ -3,3 +3,12 @@
 .content ul {
   list-style: none !important;
 }
+
+.fa-lg {
+  font-size: 2.5em;
+}
+
+.px-15 {
+  padding-left: 15%;
+  padding-right: 15%;
+}
