--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,5 +1,3 @@
-{% seo %}
-
 <meta charset="utf-8" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,24 +12,36 @@
 <link rel="apple-touch-icon" href="/assets/images/logo-hex.webp">
 <meta property="og:image" content="http://joaomarcuslf.com/assets/images/logo-hex.webp">
 
-{% if page.excerpt %}
-  <meta name="description" content="{{ page.excerpt | strip_html }}" />
-  <meta property="og:description" content="{{ page.excerpt | strip_html }}" />
-{% else %}
-  <meta name="description" content="{{ site.description | strip_html }}">
-  <meta property="og:description" content="{{ site.description | strip_html }}" />
-{% endif %}
-
 {% if page.title %}
-  <meta property="og:title" content="{{ page.title }} | {{ site.name }}" />
-  <meta property="twitter:title" content="{{ page.title }} | {{ site.name }}" />
+  {% capture site_title %}{{ page.title }}{% endcapture %}
 {% else %}
-  <meta property="og:title" content="{{ site.name }}" />
-  <meta property="twitter:title" content="{{ site.name }}" />
+  {% capture site_title %}{% t global.title %}{% endcapture %}
 {% endif %}
 
+<meta property="og:title" content="{{ site_title | strip_html }}" />
+<meta property="twitter:title" content="{{ site_title | strip_html }}" />
+<meta property="og:site_name" content="{{ site_title | strip_html }}">
+
+{% if page.excerpt %}
+  {% capture site_description %}{{ page.excerpt }}{% endcapture %}
+{% else %}
+  {% capture site_description %}{% t global.description %}{% endcapture %}
+{% endif %}
+
+<meta name="description" content="{{ site_description | strip_html }}" />
+<meta property="og:description" content="{{ site_description | strip_html }}" />
+
+<link rel="alternate" type="application/rss+xml" title="{{ site_title | strip_html }} - {{ site_description | strip_html }}" href="{{ "/feed.xml" | prepend: site.baseurl_root }}" />
 
 <meta name="keywords" content="{{ site.keywords }}">
 <meta name="abstract" content="{{ site.abstract }}">
 <meta name="author" content="{{ site.author }}">
 
+<meta property="og:locale" content="{% t global.lang %}">
+
+<link rel="canonical" href="{{ site.canonical }}">
+<meta property="og:url" content="{{ site.canonical }}">
+<meta name="twitter:card" content="summary">
+
+<meta name="twitter:site" content="@">
+<meta name="twitter:creator" content="@{{ site.username }}">
