--- a/_includes/skill-tree.html
+++ b/_includes/skill-tree.html
@@ -1,12 +1,11 @@
 <section class="hero skills-section is-dark">
   <div class="hero-body skill-tree">
-    <h2 class="skills-section-title">Skills</h2>
+    <h2 class="skills-section-title">{% t skills.title %}</h2>
 
     {% assign sorted = site.skills | sort: 'progress' | reverse %}
 
     {% for skill in sorted %}
-    <div class="skills-section-group skill-tree-element">
-
+    <div id="{{skill.name}}" class="skills-section-group skill-tree-element is-closed">
       {%
         include components/skill.html
           name=skill.name
@@ -14,7 +13,7 @@
           categories=skill.categories
       %}
 
-      <div class="skills-tree-categories">
+      <div class="skills-tree-categories is-highlight">
         {% for category in skill.categories %}
         <div class="skills-section-item card is-mini">
           <div class="card-content">
@@ -30,6 +29,13 @@
         {% endfor %}
       </div>
 
+      <div class="has-text-centered">
+        <button class="button has-icon is-light is-rounded is-outlined" onclick="expandSkillTree('{{skill.name}}')" role="button" aria-label="Expand Skill Button">
+          <span class="icon is-large">
+            <i class="fas fa-chevron-down"></i>
+          </span>
+        </button>
+      </div>
     </div>
     {% endfor %}
   </div>
