--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -1,12 +1,18 @@
+---
+layout: compress
+---
 <!DOCTYPE html>
-<html>
+<html lang="{% t global.lang %}">
   <head>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.author }}</title>
 
     {% include meta.html %}
 
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/resume.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <!--[if lt IE 9]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <link rel="stylesheet" type="text/css" href="{{ "/assets/css/resume.css" | prepend: site.baseurl_root }}" />
   </head>
 
   <body>
@@ -16,6 +22,7 @@
 
     {% include analytics.html %}
 
-    <script src="{{ site.baseurl }}/assets/js/base.js"></script>
+    <script src="{{ "/assets/js/base.js" | prepend: site.baseurl_root }}"></script>
   </body>
 </html>
+
