--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -45,13 +45,13 @@
             <img
               src="https://cdn0.iconfinder.com/data/icons/all-national-flags-of-the-world-very-high-quality-/283/usa-512.png"
               alt="">
-            <span>English</span>
+            <span>{% t global.languages.english %}</span>
           </a>
           <a class="navbar-item" href="{{ page.url | prepend: "/pt" }}">
             <img
               src="https://cdn0.iconfinder.com/data/icons/all-national-flags-of-the-world-very-high-quality-/283/brazil-512.png"
               alt="">
-            <span>Portuguese</span>
+            <span>{% t global.languages.portuguese %}</span>
           </a>
         </div>
       </div>
