Refactor post and skills

--- a/_includes/components/post.html
+++ b/_includes/components/post.html
@@ -24,4 +24,7 @@
     <h2 class="images-section-subtitle">
         {{include.title}}
     </h2>
+    <small>
+      {{ include.lang | upcase }}
+    </small>
 </a>
