--- a/_includes/expanded/posts.html
+++ b/_includes/expanded/posts.html
@@ -25,6 +25,7 @@
           title=post.title
           internal=post.internal
           tags=post.tags
+          lang=post.lang
       %}
       {% endfor %}
     </div>
