--- a/_includes/highlighted/posts.html
+++ b/_includes/highlighted/posts.html
@@ -13,6 +13,7 @@
           alt=post.alt
           title=post.title
           internal=post.internal
+          lang=post.lang
       %}
       {% endfor %}
     </div>
