--- a/_sass/components/images-section.scss
+++ b/_sass/components/images-section.scss
@@ -31,9 +31,10 @@
   .images-section-subtitle {
     @extend .subtitle;
 
-    @include truncate-text(95%);
+    @include truncate-text(100%);
 
     font-size: 1.5rem;
+    line-height: 1.7rem;
   }
 
   .images-section-group {
@@ -110,7 +111,7 @@
       .images-section-image {
         width: 100%;
         max-height: 240px;
-        padding: 1rem 0;
+        padding: 1rem 0 .25rem;
         height: 100%;
         max-height: auto;
       }
