--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -28,7 +28,7 @@
 
     <div class="navbar-end">
       <div class="navbar-item has-dropdown is-hoverable lang-dropdown">
-        <a class="navbar-link is-arrowless is-hidden-mobile is-hidden-tablet">
+        <a class="navbar-link is-arrowless is-hidden-mobile">
           {% if site.lang == "en" %}
           <img
             src="https://cdn0.iconfinder.com/data/icons/all-national-flags-of-the-world-very-high-quality-/283/usa-512.png"
