--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,13 +29,13 @@
     <div class="navbar-end">
       <div class="navbar-item has-dropdown is-hoverable lang-dropdown">
         <a class="navbar-link is-arrowless is-hidden-mobile">
-          {% if site.lang == "en" %}
+          {% if  page.lang == "pt" or site.lang == "pt" %}
           <img
-            src="https://cdn0.iconfinder.com/data/icons/all-national-flags-of-the-world-very-high-quality-/283/usa-512.png"
-            alt="">
+          src="https://cdn0.iconfinder.com/data/icons/all-national-flags-of-the-world-very-high-quality-/283/brazil-512.png"
+          alt="">
           {% else %}
           <img
-            src="https://cdn0.iconfinder.com/data/icons/all-national-flags-of-the-world-very-high-quality-/283/brazil-512.png"
+            src="https://cdn0.iconfinder.com/data/icons/all-national-flags-of-the-world-very-high-quality-/283/usa-512.png"
             alt="">
           {% endif %}
         </a>
