--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -49,6 +49,7 @@
 @import "elements/root";
 @import "elements/subtitle";
 @import "elements/title";
+@import "elements/project-card";
 
 /*
   Objects Layer
