--- a/_sass/_vendors.scss
+++ b/_sass/_vendors.scss
@@ -4,3 +4,4 @@
 @import "settings/fonts";
 @import "vendors/bulma/bulma.sass";
 @import "settings/icons";
+@import "vendors/highlight/highlight.scss";
