--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<link rel="stylesheet" type="text/css" href="{{ "/assets/css/hljs.css" | prepend: site.baseurl_root }}" />
+
 <div class="post">
   <div class="post-header">
     <h1 class="title has-text-left">{{page.title}}</h1>
