Add lessons to mentorship

--- a/_sass/generics/flex-container.scss
+++ b/_sass/generics/flex-container.scss
@@ -11,11 +11,16 @@
     flex-direction: column;
   }
 
-  .to-left {
+  &.to-left {
     justify-content: flex-start;
   }
-  .to-right {
+
+  &.to-right {
     justify-content: flex-end;
+  }
+
+  &.to-center {
+    justify-content: center;
   }
 
   &.has-space-between {
