--- a/_layouts/mentorship.html
+++ b/_layouts/mentorship.html
@@ -1,29 +1,54 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <title>
-    {% if page.title %}{{ page.title }} – {% endif %}{{ site.author }}
-  </title>
+  <head>
+    <title>
+      {% if page.title %}{{ page.title }} – {% endif %}{{ site.author }}
+    </title>
 
-  {% include meta.html %}
-  <link rel="stylesheet" type="text/css" href="{{
+    {% include meta.html %}
+    <link rel="stylesheet" type="text/css" href="{{
     "/assets/css/vendors.css"| prepend: site.baseurl_root }}">
-  </script>
-  <link rel="stylesheet" type="text/css" href="{{ "/assets/css/style.css" | prepend:
+    </script>
+    <link rel="stylesheet" type="text/css" href="{{ "/assets/css/style.css" | prepend:
     site.baseurl_root }}" />
-  <link rel="stylesheet" type="text/css" href="{{
+    <link rel="stylesheet" type="text/css" href="{{
     "/assets/css/mentorship.css"| prepend: site.baseurl_root }}">
-  </script>
-  <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{
+    </script>
+    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{
     site.description }}" href="{{ "/feed.xml" | prepend: site.baseurl_root }}" />
-</head>
+    <link rel="stylesheet" type="text/css" href="{{ "/assets/css/hljs.css" | prepend: site.baseurl_root }}" />
+  </head>
 
-<body>
-  <div id="main" role="main" class="main">{{ content }}</div>
+  <body>
+    <div id="main" role="main" class="main">
+      {% include introduction.html
+          theme="link"
+          title=page.title
+          subtitle=page.subtitle
+          class="has-background is-mini bg-mentorship typewriter"
+      %}
 
-  {% include analytics.html %}
-  <script src="{{ "/assets/js/base.js" | prepend: site.baseurl_root }}"></script>
-</body>
+      <br />
+
+      {% if page.type == "lesson" %}
+      <div class="container">
+        <article class="media">
+          <div class="media-content">
+            <div class="content">
+              {{ content }}
+            </div>
+          </div>
+        </article>
+      </div>
+      {% else %}
+      {{ content }}
+      {% endif %}
+    </div>
+
+    {% include analytics.html %}
+    <script src="{{ "/assets/js/vendors/highlight.min.js" | prepend: site.baseurl_root }}"></script>
+    <script src="{{ "/assets/js/base.js" | prepend: site.baseurl_root }}"></script>
+  </body>
 
 </html>
