--- a/_sass/_mentorship.scss
+++ b/_sass/_mentorship.scss
@@ -2,6 +2,11 @@
 
 @import "settings/settings";
 
+.is-fullwidth {
+  max-width: 100vw;
+  width: 100%;
+}
+
 .is-mirrored {
   transform: scaleX(-1);
 }
@@ -39,34 +44,53 @@
   0% {
     transform: translate(1px, 1px) rotate(0deg);
   }
+
   10% {
     transform: translate(-1px, -2px) rotate(-1deg);
   }
+
   20% {
     transform: translate(-3px, 0px) rotate(1deg);
   }
+
   30% {
     transform: translate(3px, 2px) rotate(0deg);
   }
+
   40% {
     transform: translate(1px, -1px) rotate(1deg);
   }
+
   50% {
     transform: translate(-1px, 2px) rotate(-1deg);
   }
+
   60% {
     transform: translate(-3px, 1px) rotate(0deg);
   }
+
   70% {
     transform: translate(3px, 1px) rotate(-1deg);
   }
+
   80% {
     transform: translate(-1px, -1px) rotate(1deg);
   }
+
   90% {
     transform: translate(1px, 2px) rotate(0deg);
   }
+
   100% {
     transform: translate(1px, -2px) rotate(-1deg);
   }
+}
+
+
+.border-1-dark {
+  border: 1rem $primary solid !important;
+}
+
+.border-1-light {
+  border: 1rem $secondary solid !important;
 }
